# cpp-swc

./: CMakeLists.txt  README.md  config.json
cmake/: EthCompilerSettings.cmake  ProjectJsonRpcCpp.cmake
doc/: cpp-swc说明书.docx
eth/: AccountManager.cpp  CMakeLists.txt  main.cpp
ethvm/: CMakeLists.txt
libdevcore/: CMakeLists.txt  Common.cpp  Common.h  Log.cpp  Log.h  LogBoost.h
libethashseal/: GenesisInfo.cpp  GenesisInfo.h
libethashseal/genesis/: quark.cpp
libethcore/: BasicAuthority.cpp  BlockHeader.cpp  ChainOperationParams.cpp  ChainOperationParams.h  Common.h  Exceptions.h  SealEngine.cpp  SealEngine.h  TransactionBase.cpp  TransactionBase.h
libethereum/: Account.cpp  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainRequest.cpp  BlockChainRequest.h  BlockChainSync.cpp  BlockChainSync.h  BlockQueue.cpp  CMakeLists.txt  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  EthereumHost.cpp  EthereumHost.h  EthereumPeer.cpp  EthereumPeer.h  Executive.cpp  Interface.cpp  Interface.h  State.cpp  TransactionQueue.cpp
libevm/: LegacyVMCalls.cpp
libp2p/: Common.h  Host.cpp  Host.h
libqpos/: CMakeLists.txt  Common.h  Qpos.cpp  Qpos.h  QposClient.cpp  QposClient.h  QposHost.cpp  QposHost.h  QposPeer.cpp  QposPeer.h  QposSealEngine.cpp  QposSealEngine.h
libsolidity/: CMakeLists.txt  Node.cpp  Node.h  Solidity.cpp  Solidity.h
libweb3jsonrpc/: CMakeLists.txt  Eth.cpp  Eth.h  EthFace.h  JsonHelper.cpp  JsonHelper.h  eth.json
libwebthree/: CMakeLists.txt  WebThree.cpp  WebThree.h
scripts/: install_deps.sh
test/: CMakeLists.txt
test/unittests/libdevcore/: core.cpp
